feat: basic scaffolding complete
- header and footer complete for personal website
- build by running npm run dev & npm run css:watch (thx andrew)
- want to change bg of website as well as some of the colors

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -6,7 +6,9 @@
     <title>Trev's Website</title>
     <link rel="stylesheet" href="/css/style.css"><link>
 </head>
-<body>
-    <h1 class="text-4xl font-bold text-blue-600">Hi! Welcome to my Website!</h1>
+<body class="min-h-screen flex flex-col">
+    {% include 'partials/_header.html' %}
+    {{ content | safe }}
+    {% include 'partials/_footer.html' %}
 </body>
 </html>
