feat: responsive website improvements
- embarrased myself w .DS_Store, can't have ppl know I am a mac user
- added some breakpoints for more flexibility
- also added npm run dev that runs both commands (and doesn't orphan processes instead of using &)

--- a/src/_includes/partials/_header.html
+++ b/src/_includes/partials/_header.html
@@ -1,18 +1,25 @@
-<header class="w-full bg-white flex justify-between items-center px-6 py-4">
+<header class="w-full bg-white flex justify-between md:items-center px-6 py-4 flex-col sm:flex-row sm:text-left">
 
+	<!--
 	<a href="#">
 		<img src="/assets/profile.jpeg" alt="Profile Picture" class="rounded-lg h-24">
 	</a>
+	-->
+
+	<a href="/">
+		<h1 class="text-4xl font-bold text-blue-500">Trevor Ward</h1>
+	</a>
+
 	<nav>
-		<ul class="flex gap-10 font-semibold text-2xl">
+		<ul class="flex md:gap-10 sm:gap-6 font-semibold text-2xl flex-col sm:flex-row ">
 			<li>
-				<a href='/'>Home</a>
+				<a href='/'>Thoughts</a>
 			</li>
 			<li>
 				<a href='#'>Blog</a>
 			</li>
 			<li>
-				<a href='#'>Resume</a>
+				<a href='#'>Work</a>
 			</li>
 		</ul>
 	</nav>	
