--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -6,7 +6,7 @@
     <title>Trev's Website</title>
     <link rel="stylesheet" href="/css/style.css"><link>
 </head>
-<body class="min-h-screen flex flex-col">
+<body class="min-h-screen bg-[#064273] flex flex-col">
     {% include 'partials/_header.html' %}
     {{ content | safe }}
     {% include 'partials/_footer.html' %}
