feat: working blog route
- just need to update styles
- might add a macro for rendering face and video, have some cool ideas

--- a/src/_includes/partials/_footer.html
+++ b/src/_includes/partials/_footer.html
@@ -1,7 +1,5 @@
-<footer class='bg-white w-full text-center px-6 py-6 mt-auto'>
+<footer class='bg-theme-5 w-full text-center px-6 py-6 mt-auto'>
 
-
-	<small>Trevor Ward &copy; 2024 | All rights reserved</small>
-
+	<small class='text-theme-4'>Trevor Ward &copy; 2024 | All rights reserved</small>
 
 </footer>
