--- a/src/_includes/partials/_header.html
+++ b/src/_includes/partials/_header.html
@@ -1,22 +1,13 @@
-<header class="w-full bg-white flex justify-between md:items-center px-6 py-4 flex-col sm:flex-row sm:text-left">
-
-	<!--
-	<a href="#">
-		<img src="/assets/profile.jpeg" alt="Profile Picture" class="rounded-lg h-24">
-	</a>
-	-->
+<header class="w-full bg-theme-5 flex justify-between md:items-center px-6 py-4 flex-col sm:flex-row sm:text-left">
 
 	<a href="/">
-		<h1 class="text-4xl font-bold text-blue-500">Trevor Ward</h1>
+		<h1 class="text-4xl font-bold text-theme-3">Trevor Ward</h1>
 	</a>
 
 	<nav>
-		<ul class="flex md:gap-10 sm:gap-6 font-semibold text-2xl flex-col sm:flex-row ">
+		<ul class="flex md:gap-10 sm:gap-6 font-semibold md:text-2xl sm:text-xl flex-col sm:flex-row text-theme-3">
 			<li>
-				<a href='/'>Thoughts</a>
-			</li>
-			<li>
-				<a href='#'>Blog</a>
+				<a href='/blog'>Blog</a>
 			</li>
 			<li>
 				<a href='#'>Work</a>
