feat: updated header
- also testing some different fonts
- need to format blog

--- a/src/_includes/partials/_header.html
+++ b/src/_includes/partials/_header.html
@@ -1,8 +1,8 @@
-<header class="w-full bg-theme-5 flex justify-between md:items-center px-6 py-4 flex-col sm:flex-row sm:text-left">
+<header class="w-full bg-theme-5 flex md:items-center px-6 py-4 flex-col flex-row sm:text-left">
 
 	<a href="/">
-		<h1 class="text-4xl font-bold text-theme-3">Trevor Ward</h1>
-	</a>
+		<h1 class="lg:text-6xl text-4xl font-bold text-theme-3">Trevor Ward</h1>
+	</a> 
 
 	<nav>
 		<ul class="flex md:gap-10 sm:gap-6 font-semibold md:text-2xl sm:text-xl flex-col sm:flex-row text-theme-3">
