--- a/src/index.njk
+++ b/src/index.njk
@@ -2,7 +2,15 @@
 layout: 'layouts/base.njk'
 --- 
 
-<h1>Hi! I'm Trevor!</h1>
+
+<main class='h-dvh w-dvh items-center'>
 
 
-<h3>I'm a </h3>
+  <h1 class='font-mono text-theme-1 text-2xl px-6 py-6'>Trevor is data scientist, machine learning engineer, and a technical product manager based in Denver, Colorado.</h1>
+
+
+  <h3 class='font-mono text-theme-1 text-xl'></h3>
+
+</main>
+
+
