feat: content centered in page
- need to do blog next

--- a/src/_includes/partials/_header.html
+++ b/src/_includes/partials/_header.html
@@ -1,7 +1,7 @@
 <header class="w-full bg-theme-5 flex md:items-center px-6 py-4 flex-col flex-row sm:text-left">
 
 	<a href="/">
-		<h1 class="lg:text-6xl text-4xl font-bold text-theme-3">Trevor Ward</h1>
+		<h1 class="text-4xl font-bold text-theme-3">Trevor Ward</h1>
 	</a> 
 
 	<nav>
