--- a/src/index.njk
+++ b/src/index.njk
@@ -3,13 +3,13 @@ layout: 'layouts/base.njk'
 --- 
 
 
-<main class='h-dvh w-dvh items-center'>
+<main class='mx-auto max-w-screen-md py-8 px-4'>
 
 
   <h1 class='font-mono text-theme-1 text-2xl px-6 py-6'>Trevor is data scientist, machine learning engineer, and a technical product manager based in Denver, Colorado.</h1>
 
 
-  <h3 class='font-mono text-theme-1 text-xl'></h3>
+  <h3 class='font-mono text-theme-1 text-xl px-6 py-6'>Currently, Trevor works at Rippey.AI, leading the ML development for logistics focused applications.</h3>
 
 </main>
 
