feat: better spacing
- added global font, as well as some better spacing on small devices

--- a/src/_includes/partials/_header.html
+++ b/src/_includes/partials/_header.html
@@ -1,11 +1,11 @@
-<header class="w-full bg-theme-5 flex md:items-center px-6 py-4 flex-col flex-row sm:text-left">
+<header class="w-full bg-theme-5 flex md:items-center px-10 py-5 flex-col flex-row sm:text-left">
 
 	<a href="/">
-		<h1 class="text-4xl font-bold text-theme-3">Trevor Ward</h1>
+		<h1 class="text-4xl font-bold text-theme-2">Trevor Ward</h1>
 	</a> 
 
 	<nav>
-		<ul class="flex md:gap-10 sm:gap-6 font-semibold md:text-2xl sm:text-xl flex-col sm:flex-row text-theme-3">
+		<ul class="flex text-2xl md:gap-10 sm:gap-8 font-semibold md:text-2xl flex-col sm:flex-row text-theme-3">
 			<li>
 				<a href='/blog'>Blog</a>
 			</li>
