--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -8,7 +8,9 @@
 </head>
 <body class="min-h-screen bg-theme-5 flex flex-col">
     {% include 'partials/_header.html' %}
+    <main class='font-mono text-theme-1 mx-auto max-w-screen-md py-8 px-4'>
     {{ content | safe }}
+    </main>
     {% include 'partials/_footer.html' %}
 </body>
 </html>
