--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -2,12 +2,14 @@
 layout: 'layouts/base.njk'
 ---
 
-<a href="/blogs">
+<a href="/blog">
   &#8592; <span>Blogs</span>
 </a>
 
+<h1 class='my-5 text-theme-2 text-4xl'>./{{ title }}</h1>
+<h1 class='my-5 text-theme-3 text-2xl'>{{ subtitle }}</h1>
 
-<h1>{{ title }}</h1>
-<h1>{{ subtitle }}</h1>
+<article class='prose prose-invert lg:prose-xl text-theme-1 `'>
 
-<article>{{ content | safe }}</article>
+{{ content | safe }}
+</article>
