--- a/src/blog/index.njk
+++ b/src/blog/index.njk
@@ -4,16 +4,16 @@ title: Writing | Trevor Ward
 ---
 
 <h1 class="text-2xl lg:text-3xl">
-  Trevor's Blog!
+ Blog Posts 
 </h1>
 
 {% for post in collections.post | reverse %}
   <li class="mt-2">
     <a class="inline-block" href="{{ post.url }}">
       <p>
-        <span class="underline underline-offset-2">{{ post.data.title }}</span>
+        <span class="text-xl underline underline-offset-2">{{ post.data.title }}</span>
       </p>
-      <p class="text-sm text-gray-200">{{ post.data.subtitle }}</p>
+      <p class="text-lg text-gray-200">{{ post.data.subtitle }}</p>
     </a>
   </li>
 {% endfor %}
