--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trev's Website</title>
+    <title>Trev's Web</title>
     <link rel="stylesheet" href="/css/style.css"><link>
 </head>
 <body class="min-h-screen bg-theme-5 flex flex-col">
