style: style updates
- added link css class
- updated post layout
- other small updates

--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -3,13 +3,13 @@ layout: 'layouts/base.njk'
 ---
 
 <a href="/blog">
-  &#8592; <span>Blogs</span>
+  &#8592; <span>..</span>
 </a>
 
 <h1 class='my-5 text-theme-2 text-4xl'>./{{ title }}</h1>
 <h1 class='my-5 text-theme-3 text-2xl'>{{ subtitle }}</h1>
 
-<article class='prose prose-invert lg:prose-xl text-theme-1 `'>
+<article class='py-4 prose prose-invert lg:prose-xl text-theme-1 `'>
 
 {{ content | safe }}
 </article>
