--- a/src/_includes/partials/_header.html
+++ b/src/_includes/partials/_header.html
@@ -1,7 +1,7 @@
-<header class="w-full bg-theme-5 flex md:items-center px-10 py-5 flex-col flex-row sm:text-left">
+<header class="font-mono w-full bg-theme-5 flex md:items-center px-10 py-5 flex-col flex-row sm:text-left">
 
 	<a href="/">
-		<h1 class="text-4xl font-bold text-theme-2">Trevor Ward</h1>
+		<h1 class="text-4xl md:text-6xl font-bold text-theme-2">Trevor Ward</h1>
 	</a> 
 
 	<nav>
