--- a/src/index.njk
+++ b/src/index.njk
@@ -3,8 +3,8 @@ layout: 'layouts/base.njk'
 --- 
 
 
-  <h1 class='text-2xl px-6 py-6'>Trevor is data scientist, machine learning engineer, and a technical product manager based in Denver, Colorado.</h1>
+  <h1 class='text-2xl'>Trevor is data scientist, machine learning engineer, and a technical product manager based in Denver, Colorado.</h1>
 
 
-  <h3 class='text-xl px-6 py-6'>Currently, Trevor works at Rippey.AI, leading the ML development for logistics focused applications.</h3>
+  <h3 class='text-xl py-6'>Currently, Trevor works at <a href='https://rippey.ai/' class='link'>Rippey.AI</a>, leading the ML development for logistics focused applications.</h3>
 
