--- a/tailwind.css
+++ b/tailwind.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+	.link {
+		@apply underline underline-offset-2; 
+	}
+}
