--- a/src/blog/index.njk
+++ b/src/blog/index.njk
@@ -12,7 +12,7 @@ title: Blog | Trevor Ward
   <li class="mt-2">
     <a class="inline-block" href="{{ post.url }}">
       <p>
-        <span class="text-xl underline underline-offset-2">{{ post.data.title }}</span>
+        <span class="text-xl link">{{ post.data.title }}</span>
       </p>
       <p class="text-lg text-gray-200">{{ post.data.subtitle }}</p>
     </a>
