--- a/src/index.njk
+++ b/src/index.njk
@@ -3,8 +3,8 @@ layout: 'layouts/base.njk'
 --- 
 
 
-  <h1 class='text-2xl'>Trevor is data scientist, machine learning engineer, and a technical product manager based in Denver, Colorado.</h1>
+  <h1 class='text-2xl'>Trevor is <a class='link' href='https://that-recsys-lab.net/home/people#trevor-ward'>data scientist</a>, machine learning engineer, and a technical product manager based in Denver, Colorado.</h1>
 
 
-  <h3 class='text-xl py-6'>Currently, Trevor works at <a href='https://rippey.ai/' class='link'>Rippey.AI</a>, leading the ML development for logistics focused applications.</h3>
+  <h3 class='text-xl py-6'>Currently, Trevor works at <a href='https://rippey.ai/' class='link'>Rippey.AI</a>, leading the development of machine learning solutions for logistics focused applications.</h3>
 
