style: minor style updates
- also started a few articles

--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -9,7 +9,8 @@ layout: 'layouts/base.njk'
 <h1 class='my-5 text-theme-2 text-4xl'>{{ title }}</h1>
 <h1 class='my-5 text-theme-3 text-2xl'>{{ subtitle }}</h1>
 
-<article class='py-4 prose prose-invert lg:prose-xl text-theme-1 `'>
+<hr>
 
+<article class='py-4 prose prose-invert lg:prose-xl text-theme-1'>
 {{ content | safe }}
 </article>
