--- a/src/blog/index.njk
+++ b/src/blog/index.njk
@@ -4,10 +4,10 @@ title: Blog | Trevor Ward
 ---
 
 <h1 class="text-2xl text-center lg:text-3xl">
- Blog Posts 
+ Recent Posts
 </h1>
 
-<ul>
+<ul class='mt-6'>
 {% for post in collections.post | reverse %}
   <li class="mt-2">
     <a class="inline-block" href="{{ post.url }}">
