--- a/src/blog/index.njk
+++ b/src/blog/index.njk
@@ -3,7 +3,7 @@ layout: 'layouts/base.njk'
 title: Blog | Trevor Ward
 ---
 
-<h1 class="text-3xl md:text-center">
+<h1 class="text-2xl lg:text-3xl md:text-center">
  Recent Posts
 </h1>
 
