updated first blog

--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -6,8 +6,8 @@ layout: 'layouts/base.njk'
   &#8592; <span>..</span>
 </a>
 
-<h1 class='my-5 text-theme-2 text-4xl'>{{ title }}</h1>
-<h1 class='my-5 text-theme-3 text-2xl'>{{ subtitle }}</h1>
+<h1 class='font-serif capitalize my-5 text-theme-2 text-4xl'>{{ title }}</h1>
+<h1 class='font-serif capitalize my-5 text-theme-3 text-2xl'>{{ subtitle }}</h1>
 
 <hr>
 
