--- a/src/_includes/partials/_header.html
+++ b/src/_includes/partials/_header.html
@@ -1,4 +1,4 @@
-<header class="font-mono w-full bg-theme-5 flex md:items-center px-10 py-5 flex-col flex-row sm:text-left">
+<header class="font-sans w-full bg-theme-5 flex md:items-center px-10 py-5 flex-col flex-row sm:text-left">
 
 	<a href="/">
 		<h1 class="text-4xl md:text-5xl font-bold text-theme-2">Trevor Ward</h1>
