feat: added svg and prose p coloring
- adding some color to the text so it isn't as harsh on the eyes
- added svg bubble that disappears on mobile, will be positioning my face inside of it

--- a/src/index.njk
+++ b/src/index.njk
@@ -3,7 +3,14 @@ layout: 'layouts/base.njk'
 --- 
 
 
-  <h1 class='text-2xl'>Trevor is a <a class='link' href='https://that-recsys-lab.net/home/people#trevor-ward'>data scientist</a>, machine learning engineer, and a technical product manager based in Denver, Colorado.</h1>
+  <h1 class='text-2xl'>Trevor is a <a class='link' href='https://that-recsys-lab.net/home/people#trevor-ward'>researcher</a>, machine learning engineer, and a technical product manager based in Denver, Colorado.</h1>
 
 
   <h3 class='text-xl py-6'>Currently, Trevor works at <a href='https://rippey.ai/' class='link'>Rippey.AI</a>, leading the development of machine learning solutions for logistics focused applications.</h3>
+
+
+
+
+  <svg class="hidden lg:block" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
+  <path fill="#4044D4" d="M48.9,-49.4C62.5,-35.3,72.1,-17.6,73.4,1.4C74.8,20.4,67.9,40.7,54.3,52.4C40.7,64.1,20.4,67.2,-0.8,68C-21.9,68.8,-43.8,67.3,-56,55.5C-68.2,43.8,-70.6,21.9,-69.4,1.2C-68.2,-19.5,-63.3,-39,-51.2,-53.1C-39,-67.3,-19.5,-76,-0.9,-75.1C17.6,-74.2,35.3,-63.5,48.9,-49.4Z" transform="translate(100 100)" />
+</svg>
