--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -11,6 +11,6 @@ layout: 'layouts/base.njk'
 
 <hr>
 
-<article class='py-5 prose prose-invert lg:prose-xl text-theme-1'>
+<article class='py-5 prose prose-invert prose-p text-[#d7d2c5] lg:prose-xl text-theme-1'>
 {{ content | safe }}
 </article>
