--- a/src/_includes/partials/_footer.html
+++ b/src/_includes/partials/_footer.html
@@ -1,5 +1,19 @@
-<footer class='bg-theme-5 w-full text-center px-6 py-6 mt-auto'>
+<footer class='bg-theme-5 w-full text-center px-6 py-6 lg:py-1 mt-auto'>
 
-	<small class='text-theme-4'>Trevor Ward &copy; 2024 | All rights reserved</small>
+    <nav class="py-8 lg:py-1 text-theme-2 text-center">
+      <h3 class="font-serif text-xl font-bold">Contact Trevor</h3>
+      <div class="flex gap-6 pt-2 justify-center">
+        <a href="https://www.linkedin.com/in/trevorward001/" target="_blank">
+          Linkedin
+        </a>
+        <a href="mailto:trevorward001@gmail.com" target="_blank">
+          Email
+        </a>
+        <a href="https://github.com/TrevorW-code" target="_blank">
+          Github
+        </a>
+      </div>
+	<p class='opacity-50 pt-4'>Trevor Ward &copy; 2024</p>
+    </nav>
 
 </footer>
