--- a/src/index.njk
+++ b/src/index.njk
@@ -3,14 +3,18 @@ layout: 'layouts/base.njk'
 --- 
 
 
-  <h1 class='text-2xl'>Trevor is a <a class='link' href='https://that-recsys-lab.net/home/people#trevor-ward'>researcher</a>, machine learning engineer, and a technical product manager based in Denver, Colorado.</h1>
-
+  <h1 class='text-2xl lg:text-3xl'>Trevor is a <a class='link' href='https://that-recsys-lab.net/home/people#trevor-ward'>researcher</a>, machine learning engineer, and a technical product manager based in Denver, Colorado.</h1>
 
   <h3 class='text-xl py-6'>Currently, Trevor works at <a href='https://rippey.ai/' class='link'>Rippey.AI</a>, leading the development of machine learning solutions for logistics focused applications.</h3>
 
 
-
-
-  <svg class="hidden lg:block" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-  <path fill="#4044D4" d="M48.9,-49.4C62.5,-35.3,72.1,-17.6,73.4,1.4C74.8,20.4,67.9,40.7,54.3,52.4C40.7,64.1,20.4,67.2,-0.8,68C-21.9,68.8,-43.8,67.3,-56,55.5C-68.2,43.8,-70.6,21.9,-69.4,1.2C-68.2,-19.5,-63.3,-39,-51.2,-53.1C-39,-67.3,-19.5,-76,-0.9,-75.1C17.6,-74.2,35.3,-63.5,48.9,-49.4Z" transform="translate(100 100)" />
-</svg>
+  <div class="w-full flex justify-center image-container clip-path">
+    <img src="/assets/prof.png" class="hidden lg:block bg-[#4044D4]" alt="Picture of Trevor">
+    <svg width="0" height="0">
+      <defs>
+        <clipPath id="clip" clipPathUnits="objectBoundingBox">
+          <path d="M 0.9311 0.8138 C 0.8489 0.9675 0.6097 0.995 0.4134 0.9493 C 0.2181 0.9035 0.0661 0.7853 0.0269 0.6001 C -0.0131 0.4151 0.0607 0.1633 0.2189 0.068 C 0.3766 -0.0266 0.6205 0.0349 0.7794 0.2066 C 0.9383 0.3782 1.0139 0.6594 0.9311 0.8138 Z"/>
+        </clipPath>
+      </defs>
+    </svg>
+  </div>
