style: small change in spacing and font

--- a/src/_includes/partials/_footer.html
+++ b/src/_includes/partials/_footer.html
@@ -1,7 +1,7 @@
-<footer class='bg-theme-5 w-full text-center px-6 py-6 lg:py-1 mt-auto'>
+<footer class='bg-theme-5 w-full text-center px-6 py-1 mt-auto'>
 
     <nav class="py-8 lg:py-1 text-theme-2 text-center">
-      <h3 class="font-serif text-xl font-bold">Contact Trevor</h3>
+      <h3 class="font-sans text-xl font-bold">Contact Trevor</h3>
       <div class="flex gap-6 pt-2 justify-center">
         <a href="https://www.linkedin.com/in/trevorward001/" target="_blank">
           Linkedin
