feat: added date and some test styling

--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -11,6 +11,16 @@ layout: 'layouts/base.njk'
 
 <hr>
 
-<article class='py-5 prose prose-invert prose-p text-[#d7d2c5] lg:prose-xl text-theme-1'>
+<article class='py-5 prose prose-invert prose-p:text-[#c6c6c4] lg:prose-xl text-theme-1 prose-a:link'>
 {{ content | safe }}
 </article>
+
+<hr>
+
+<div class='font-serif text-[#c6c6c4]'>
+
+<h4 class='mt-5 text-theme-3 text-xl'>Psst! 👋</h4> 
+
+<p class='mt-5 text-theme-3 text-md'>Thanks for reading my post. I write about engineering, machine learning, and sometimes random topics. If you want to hear more about me and my story, click <a href='/' class='link opacity-100'>here</a>.</p>
+
+</div>
