--- a/tailwind.css
+++ b/tailwind.css
@@ -21,7 +21,7 @@
 	}
 
 	.link {
-		@apply font-bold decoration-indigo-800 underline underline-offset-2;
+		@apply font-bold decoration-indigo-800 underline underline-offset-2 opacity-100;
 	}
 
 	.link:hover {
