--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -2,12 +2,12 @@
 layout: 'layouts/base.njk'
 ---
 
-<a href="/blog">
+<a href="/posts">
   &#8592; <span>..</span>
 </a>
 
-<h1 class='font-serif capitalize my-5 text-theme-2 text-4xl'>{{ title }}</h1>
-<h1 class='font-serif capitalize my-5 text-theme-3 text-2xl'>{{ subtitle }}</h1>
+<h1 class='font-serif capitalize my-5 text-theme-2 text-5xl'>{{ title }}</h1>
+<h2 class='font-serif capitalize my-5 text-theme-3 text-3xl'>{{ subtitle }}</h2>
 
 <hr>
 
@@ -19,8 +19,8 @@ layout: 'layouts/base.njk'
 
 <div class='font-serif text-[#c6c6c4]'>
 
-<h4 class='mt-5 text-theme-3 text-xl'>Psst! 👋</h4> 
+<h4 class='mt-5 text-theme-3 text-xl lg:text-2xl'>Psst! 👋</h4> 
 
-<p class='mt-5 text-theme-3 text-md'>Thanks for reading my post. I write about engineering, machine learning, and sometimes random topics. If you want to hear more about me and my story, click <a href='/' class='link opacity-100'>here</a>.</p>
+<p class='mt-5 text-theme-3 text-md lg:text-xl'>Thanks for reading my post. I write about engineering, machine learning, and sometimes random topics. If you want to hear more about me and my story, click <a href='/' class='link opacity-100'>here</a>.</p>
 
 </div>
