--- a/src/posts/feed.njk
+++ b/src/posts/feed.njk
@@ -3,10 +3,10 @@
   "permalink": "feed.xml",
   "eleventyExcludeFromCollections": true,
   "metadata": {
-    "title": "Blog",
-    "subtitle": "Trevor's Blog",
+    "title": "posts",
+    "subtitle": "Trevor's posts",
     "language": "en",
-    "url": "https://trevorward.me/blog",
+    "url": "https://trevorward.me/posts",
     "author": {
       "name": "Trevor Ward",
       "email": "trevorward001@gmail.com"
