--- a/src/_includes/partials/_header.html
+++ b/src/_includes/partials/_header.html
@@ -7,7 +7,7 @@
 	<nav>
 		<ul class="flex text-2xl md:gap-10 sm:gap-8 md:text-2xl flex-col sm:flex-row text-theme-3">
 			<li>
-				<a href='/blog'>Blog</a>
+				<a href='/posts'>Posts</a>
 			</li>
 		</ul>
 	</nav>	
