slightly better colors for hover

--- a/src/posts/index.njk
+++ b/src/posts/index.njk
@@ -21,7 +21,7 @@ title: Posts | Trevor Ward
           <span class='text-sm text-gray-200 italic opacity-50'>{{ post.data.type }}</span>
         </p>
       </div>
-      <div class="glow p-2 absolute -z-10 -inset-0 bg-gradient-to-r from-amber-900 to-lime-900 blur"></div>
+      <div class="glow p-2 absolute -z-10 -inset-0 bg-gradient-to-r from-purple-600 to-pink-600 blur"></div>
     </a>
   </li>
 {% endfor %}
