feat: gradient pic background
- a nice touch I am testing for now
- removed hover gradient on mobile devices

--- a/src/index.njk
+++ b/src/index.njk
@@ -9,7 +9,7 @@ layout: 'layouts/base.njk'
 
 
   <div class="w-full flex justify-center image-container clip-path">
-    <img src="/assets/prof.png" class="bg-indigo-800" alt="Picture of Trevor">
+    <img src="/assets/prof.png" class="bg-gradient-to-r from-blue-700 to-indigo-800 " alt="Picture of Trevor">
     <svg width="0" height="0">
       <defs>
         <clipPath id="clip" clipPathUnits="objectBoundingBox">
