--- a/src/posts/index.njk
+++ b/src/posts/index.njk
@@ -21,7 +21,7 @@ title: Posts | Trevor Ward
           <span class='text-xs text-gray-200 opacity-25 capitalize'>{{ post.data.type }}</span>
         </p>
       </div>
-      <div class="glow p-2 absolute -z-10 -inset-0 bg-gradient-to-r from-purple-600 to-pink-600 blur"></div>
+      <div class="md:glow"></div>
     </a>
   </li>
 {% endfor %}
