--- a/tailwind.css
+++ b/tailwind.css
@@ -7,7 +7,8 @@
 
 	.glow {
 		opacity: 0;
-		transition: opacity 0.3s ease; /* Add transition for smooth reveal */
+		transition: opacity 0.3s ease;
+		@apply p-2 absolute -z-10 -inset-0 bg-gradient-to-r from-purple-600 to-pink-600 blur
 	}
 	
 	.post:hover .glow {
