feat: added weird hover on blog

--- a/tailwind.css
+++ b/tailwind.css
@@ -8,11 +8,29 @@
 	.glow {
 		opacity: 0;
 		transition: opacity 0.3s ease;
-		@apply p-2 absolute -z-10 -inset-0 bg-gradient-to-r from-purple-600 to-pink-600 blur
+		@apply p-2 absolute -z-10 -inset-0 bg-gradient-to-r from-purple-600 to-pink-600 blur-[20px]
+	}
+
+	.post::after {
+		content: "";
+		position: absolute;
+		left: 0;
+		top: 0;
+		width: 100%;
+		height: 100%;
+		transition: opacity 1s ease;
+		/* background: linear-gradient(45deg, #36D8FF, #00acee, #66757f); */
+		opacity: 0;
+		@apply bg-gradient-to-r from-purple-600 to-pink-600
+	}
+
+	.post:hover::after {
+		opacity: 1;
 	}
 	
 	.post:hover .glow {
 		opacity: 1;
+		@apply border-4 border-solid border-indigo-500
 	}
 
     .image-container {
@@ -25,13 +43,17 @@
 		height: 100%;
 		object-fit: cover;
 	}
-	
+
     .clip-path {
 		clip-path: url(#clip);
 	}
 
 	.link {
 		@apply font-bold decoration-indigo-800 underline underline-offset-2 opacity-100;
+	}
+
+	.cblur {
+		-webkit-filter: blur(400px);
 	}
 
 	.link:hover {
