--- a/tailwind.css
+++ b/tailwind.css
@@ -8,29 +8,33 @@
 	.glow {
 		opacity: 0;
 		transition: opacity 0.3s ease;
-		@apply p-2 absolute -z-10 -inset-0 bg-gradient-to-r from-purple-600 to-pink-600 blur-[20px]
+		@apply p-2 absolute -z-10 -inset-0 bg-gradient-to-r from-purple-600 to-pink-600 blur-[30px]
 	}
 
-	.post::after {
+	.highlight::after {
 		content: "";
 		position: absolute;
 		left: 0;
 		top: 0;
 		width: 100%;
 		height: 100%;
-		transition: opacity 1s ease;
-		/* background: linear-gradient(45deg, #36D8FF, #00acee, #66757f); */
+		transition: opacity .3s ease;
 		opacity: 0;
-		@apply bg-gradient-to-r from-purple-600 to-pink-600
+		z-index: 0; /* Ensure it doesn't interfere with internal elements */
+		@apply bg-gradient-to-r from-purple-700 to-pink-700 rounded
 	}
+	
+	.highlight > * {
+		position: relative;
+		z-index: 1; 
+	} 
 
-	.post:hover::after {
+	.highlight:hover::after {
 		opacity: 1;
 	}
 	
 	.post:hover .glow {
 		opacity: 1;
-		@apply border-4 border-solid border-indigo-500
 	}
 
     .image-container {
