trying new colors

--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -11,7 +11,7 @@ layout: 'layouts/base.njk'
 
 <hr>
 
-<article class='py-5 prose prose-invert prose-p:text-[#c6c6c4] lg:prose-xl text-theme-1 prose-a:link'>
+<article class='py-5 prose prose-invert prose-h2: prose-p:text-theme-3 lg:prose-xl prose-a:link'>
 {{ content | safe }}
 </article>
 
