--- a/src/posts/index.njk
+++ b/src/posts/index.njk
@@ -3,13 +3,13 @@ layout: 'layouts/base.njk'
 title: Posts | Trevor Ward
 ---
 
-<h1 class="text-2xl lg:text-3xl md:text-center">
+<h3 class="text-xl underline underline-offset-2 lg:text-3xl md:text-center">
  Recent
-</h1>
+</h3>
 
 <ul class='mt-6'>
 {% for post in collections.post | reverse %}
-  <li class="md:highlight post py-3 px-3 rounded mt-2 shadow-xl bg-gray-700 relative">
+  <li class="md:highlight post py-3 px-3 rounded mt-2 shadow-xl bg-theme-4 relative">
     <a href="{{ post.url }}">
       <p class="flex flex-row justify-between md:gap-12 items-center">
         <span class="text-xl font-bold">{{ post.data.title }}</span>
