--- a/tailwind.css
+++ b/tailwind.css
@@ -8,7 +8,7 @@
 	.glow {
 		opacity: 0;
 		transition: opacity 0.3s ease;
-		@apply p-2 absolute -z-10 -inset-0 bg-gradient-to-r from-theme-2 to-theme-1 blur-[20px]
+		@apply p-2 absolute -z-10 -inset-0 bg-gradient-to-r from-theme-2 to-theme-1 blur-[20px] 
 	}
 
 	.highlight::after {
@@ -18,6 +18,7 @@
 		top: 0;
 		width: 100%;
 		height: 100%;
+		pointer-events: none;
 		transition: opacity .3s ease;
 		opacity: 0;
 		z-index: 0; /* Ensure it doesn't interfere with internal elements */
@@ -53,7 +54,7 @@
 	}
 
 	.link {
-		@apply font-bold decoration-theme-2 underline underline-offset-2 opacity-100;
+		@apply text-theme-3 font-bold decoration-theme-2 underline underline-offset-2 opacity-100;
 	}
 
 	.cblur {
