style: more small updates

--- a/src/posts/index.njk
+++ b/src/posts/index.njk
@@ -3,8 +3,8 @@ layout: 'layouts/base.njk'
 title: Posts | Trevor Ward
 ---
 
-<h3 class="text-xl underline underline-offset-2 lg:text-3xl md:text-center">
- Recent
+<h3 class="text-xl px-3 text-theme-3 lg:text-2xl md:text-center md:p-0">
+ Recent Posts
 </h3>
 
 <ul class='mt-6'>
