fix: updated post date and footer

--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -21,6 +21,6 @@ layout: 'layouts/base.njk'
 
 <h4 class='mt-5 text-theme-3 text-xl lg:text-2xl'>Psst! 👋</h4> 
 
-<p class='mt-5 text-theme-3 text-md lg:text-xl'>Thanks for reading my post. I write about engineering, machine learning, and sometimes random topics. If you want to hear more about me and my story, click <a href='/' class='link opacity-100'>here</a>.</p>
+<p class='mt-5 text-theme-3 text-md lg:text-xl'>Thanks for reading my post. I write about engineering, machine learning, and sometimes life. If you want to hear more about me and my story, click <a href='/' class='link opacity-100'>here</a>.</p>
 
 </div>
