--- a/tailwind.css
+++ b/tailwind.css
@@ -26,7 +26,7 @@
 	.glow {
 		opacity: 0;
 		transition: opacity 0.3s ease;
-		@apply p-2 absolute -z-10 -inset-0 bg-gradient-to-r from-purple-600 to-pink-600 blur-[20px]
+		@apply p-2 absolute -z-10 -inset-0 bg-gradient-to-r from-purple-600 to-pink-600 blur-[12px]
 	}
 
 	.highlight::after {
@@ -48,11 +48,11 @@
 	} 
 
 	.highlight:hover::after {
-		opacity: 0.5;
+		opacity: .3;
 	}
-	
+
 	.post:hover .glow {
-		opacity: 1;
+		opacity: .5;
 	}
 
     .image-container {
@@ -72,10 +72,6 @@
 
 	.link {
 		@apply font-bold decoration-indigo-800 underline underline-offset-2 opacity-100;
-	}
-
-	.cblur {
-		-webkit-filter: blur(400px);
 	}
 
 	.link:hover {
