--- a/src/posts/index.njk
+++ b/src/posts/index.njk
@@ -3,8 +3,8 @@ layout: 'layouts/base.njk'
 title: Posts | Trevor Ward
 ---
 
-<h3 class="text-xl px-3 text-theme-3 lg:text-2xl md:text-center md:p-0">
-Recent
+<h3 class="text-xl text-theme-3 lg:text-2xl md:text-center md:px-0">
+Most Recent
 </h3>
 
 <ul class='mt-6'>
