style: added footer back

--- a/src/_includes/partials/_footer.html
+++ b/src/_includes/partials/_footer.html
@@ -1,7 +1,19 @@
 <footer class='bg-theme-5 w-full text-center px-6 py-1 mt-auto'>
 
     <nav class="py-8 lg:py-1 text-theme-3 text-center">
-	<p class='opacity-50 pt-4'>Trevor Ward &copy; 2024</p>
+        <h3 class="font-sans text-xl font-bold text-theme-1">Say Hi!</h3>
+        <div class="flex gap-6 pt-2 justify-center">
+          <a href="https://www.linkedin.com/in/trevorward001/" target="_blank">
+            Linkedin
+          </a>
+          <a href="mailto:trevorward001@gmail.com" target="_blank">
+            Email
+          </a>
+          <a href="https://github.com/TrevorW-code" target="_blank">
+            Github
+          </a>
+        </div>
+    <p class='opacity-50 pt-4'>Trevor Ward &copy; 2024</p>
     </nav>
 
 </footer>
