--- a/src/posts/index.njk
+++ b/src/posts/index.njk
@@ -3,7 +3,7 @@ layout: 'layouts/base.njk'
 title: Posts | Trevor Ward
 ---
 
-<h3 class="text-xl text-theme-3 lg:text-2xl md:text-center md:px-0">
+<h3 class="text-2xl text-theme-3 lg:text-3xl md:text-center md:px-0">
 Most Recent
 </h3>
 
@@ -12,11 +12,11 @@ Most Recent
   <li class="post md:highlight shadow-xl rounded bg-theme-4 relative">
     <a href="{{ post.url }}">
       <div class="py-3 px-3 mt-2">
-      <p class="flex flex-row justify-between md:gap-12 ">
+      <p class="flex flex-row justify-between md:gap-96 items-center">
         <span class="text-xl font-bold">{{ post.data.title }}</span>
-	      <span class="text-xs text-gray-200 italic opacity-75">{{ post.date | formatDate("long") }}</span>
+        <span class="text-xs text-gray-200 italic opacity-75">{{ post.date | formatDate("long") }}</span>
       </p>
-	      <p class="flex flex-row justify-between md:gap-12 items-center">
+        <p class="flex flex-row justify-between md:gap-32 items-center">
           <span class='text-lg text-gray-200 opacity-50'>{{ post.data.subtitle }}</span>
           <span class='text-xs text-gray-200 opacity-25 capitalize'>{{ post.data.type }}</span>
         </p>
