style(home): removed profile pic

--- a/src/index.njk
+++ b/src/index.njk
@@ -2,18 +2,10 @@
 layout: 'layouts/base.njk'
 --- 
 
+  <h1 class='text-3xl lg:text-4xl text-theme-3'>Trevor is a researcher, <a class='link' href='https://www.linkedin.com/in/trevorward001/'>machine learning engineer</a>, and breakfast burrito enthusiast based in Denver.</h1>
 
-  <h1 class='text-2xl lg:text-3xl text-theme-3'>Trevor is a <a class='link' href='https://that-recsys-lab.net/home/people#trevor-ward'>researcher</a>, machine learning engineer, and breakfast burrito enthusiast based in Denver, Colorado.</h1>
+  <h3 class='text-xl  lg:text-2xl py-6 text-theme-3'>He graduated from <a class='link' href='https://www.colorado.edu/'>CU Boulder</a> (🦬 sko buffs 🦬) with a degree in information science and business. During his studies, he advanced <a href='https://that-recsys-lab.net/home/people' class='link'>algorithmic fairness research</a> and helped build <a class='link' href='https://github.com/Blueprint-Boulder/f21s22-foster-source'>foster source</a> to connect foster parents with respite providers.</h3>
 
-  <h3 class='text-xl py-6 text-theme-3'>Currently, Trevor works at <a href='https://rippey.ai/' class='link'>Rippey.AI</a>, leading the development of machine learning solutions for logistics focused applications.</h3>
+  <h5 class='text-md  lg:text-lg py-6 text-theme-3'>Currently, Trevor works at <a href='https://rippey.ai/' class='link'>Rippey.AI</a>, leading the development of machine learning solutions for logistics focused applications.</h5>
 
-  <div class="w-full flex justify-center image-container clip-path">
-    <img src="/assets/prof.png" class="bg-gradient-to-r from-theme-2 to-theme-1" alt="Picture of Trevor">
-    <svg width="0" height="0">
-      <defs>
-        <clipPath id="clip" clipPathUnits="objectBoundingBox">
-          <path d="M 0.9311 0.8138 C 0.8489 0.9675 0.6097 0.995 0.4134 0.9493 C 0.2181 0.9035 0.0661 0.7853 0.0269 0.6001 C -0.0131 0.4151 0.0607 0.1633 0.2189 0.068 C 0.3766 -0.0266 0.6205 0.0349 0.7794 0.2066 C 0.9383 0.3782 1.0139 0.6594 0.9311 0.8138 Z"/>
-        </clipPath>
-      </defs>
-    </svg>
   </div>
